<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:rowCount="3">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_1"
                android:onClick="SetTeamIcon"
                app:layout_column="0"
                app:layout_row="0"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_2"
                android:onClick="SetTeamIcon"
                app:layout_column="1"
                app:layout_row="0"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_3"
                android:onClick="SetTeamIcon"
                app:layout_column="0"
                app:layout_row="1"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_4"
                android:onClick="SetTeamIcon"
                app:layout_column="1"
                app:layout_row="1"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_5"
                android:onClick="SetTeamIcon"
                app:layout_column="0"
                app:layout_row="2"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_6"
                android:onClick="SetTeamIcon"
                app:layout_column="1"
                app:layout_row="2"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>