<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000"
                android:contentDescription="@string/sports_team_avatar"
                android:onClick="OnSetAvatarButton"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/pfp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="62dp"
                android:layout_height="29dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_a_team_name"
                android:textColor="#636363"
                android:textColorHint="#8D6E63"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zipCodeTextView"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/zip_code"
                android:textColor="#000000"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postalCodeEditText"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_zip_code"
                android:minHeight="48dp"
                android:textColor="#676767"
                android:textColorHint="#795548" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/OpenInGoogleMaps"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hapticFeedbackEnabled="false"
                android:onClick="@{MainActivity.OnOpenInGoogleMaps}"
                android:text="@string/open_in_google_maps" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>